--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+    <div class="navbar">
+      <a href="/">Home</a>
+      <a href="/celebrities">Celebrities</a>
+      <a href="/celebrities/create">Create a Celebrity</a>
+      <a href="/movies">Movies</a>
+      <a href="/movies/create">Create a Movie</a>
+    </div>
     <div class="container">
       {{{body}}}
     </div>
